z-index fix

--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -7,6 +7,7 @@
 }
 .jumbotron{
     list-style-type: none;
+    
 }
 .jumbotron-card{
     /* max-width: 100%; */
@@ -43,12 +44,13 @@ li.floor-btn button.btn-primary{
     width: 49%;
     padding: 2%;
     margin-bottom: 2%;
+    
 }
 
 section{
     padding: 1%;
     margin:2%;
-    z-index: -100;
+    /* z-index: -900; */
 }
 
 div.contact-form{
@@ -58,7 +60,7 @@ div.contact-form{
   padding: 50px;
   font-size: 20px;
   box-shadow: 2px 7px 7px 0 rgba(101, 104, 108, 0.2);
- z-index: 100;
+ 
  height: fit-content;
 
  list-style-type: none;
@@ -73,6 +75,7 @@ div.contact-form div.form{
     background-color:rgb(255, 136, 0) ;
     border: 0px;
     padding: 2% 0 2%;
+    
 
 }
 
@@ -99,6 +102,7 @@ div.contact-form div.form{
     position:relative;
     height:0;
     border: 1px solid black;
+    
     }
     .responsive-map iframe{
     left:0;
@@ -106,6 +110,7 @@ div.contact-form div.form{
     height:100%;
     width:100%;
     position:absolute;
+    
     }
 
 
